--- a/html/contato.html
+++ b/html/contato.html
@@ -1,28 +1,94 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
-    <header>
-        <nav class="navbar navbar-expand-lg bg-body-tertiary">
-            <div class="container-fluid">
-                <a class="navbar-brand" href="#">
-                    <img src="../CV_BootStrap/img/simbolo_degradê.png" alt="Bootstrap" width="40" height="34">
-                  </a>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="../CV_BootStrap/html/portfolio.html">Portfólio</a>
-                  <a class="nav-link active" href="../CV_BootStrap/html/contato.html">Contato</a>
-                </div>
-              </div>
-            </div>
-          </nav>
-    </header>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Bootstrap demo</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+  <style>
+    .black-section {
+      background-color: #1c1c1c;
+      color: #f1f1f1;
+      margin: 0;
+      padding: 40px;
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+    }
+  </style>
+</head>
+
+<body>
+  <header>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="../img/perfil preto.png" alt="Logo" width="40" height="34">
+        </a>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav">
+            <a class="nav-link" href="../index.html">Home</a>
+            <a class="nav-link" href="../html/portfolio.html">Portfólio</a>
+            <a class="nav-link active" href="../html/contato.html">Contato</a>
+          </div>
+        </div>
+      </div>
+    </nav>
+  </header>
+
+  <div class="container mt-5">
+    <div class="black-section mb-5">
+      <form>
+        <!-- Nome -->
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="name-addon">Nome</span>
+          <input type="text" class="form-control" placeholder="Nome Completo" aria-label="Nome"
+            aria-describedby="name-addon" required>
+        </div>
+
+        <!-- Instagram -->
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="instagram-addon">@</span>
+          <input type="text" class="form-control" placeholder="Instagram" aria-label="Instagram"
+            aria-describedby="instagram-addon" required>
+        </div>
+
+        <!-- E-mail -->
+        <div class="input-group mb-3">
+          <input type="text" class="form-control" placeholder="SeuEmail" aria-label="E-mail"
+            aria-describedby="email-addon" required>
+          <span class="input-group-text" id="email-addon">@gmail.com</span>
+        </div>
+
+        <!-- Telefone -->
+        <div class="input-group mb-3">
+          <span class="input-group-text" id="phone-addon">+55</span>
+          <input type="tel" class="form-control" placeholder="(31) 9XXXX-XXXX" aria-label="Telefone"
+            aria-describedby="phone-addon" required>
+        </div>
+
+        <!-- Endereço -->
+        <div class="mb-3">
+          <label for="address" class="form-label">Endereço Completo</label>
+          <textarea class="form-control" id="address" placeholder="Rua, Número, Bairro, Cidade, Estado, CEP"
+            aria-label="Endereço Completo" rows="3" required></textarea>
+        </div>
+
+        <!-- Botão de Envio -->
+        <button type="submit" class="btn btn-primary">Enviar</button>
+      </form>
+    </div>
+
+  </div>
+
+
+
+
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+    crossorigin="anonymous"></script>
+</body>
+
 </html>
