--- a/index.html
+++ b/index.html
@@ -1,104 +1,154 @@
 <!doctype html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Bootstrap Demo</title>
     <link rel="stylesheet" href="../CV_BootStrap/css/index.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-  </head>
-  <body>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
+
+    <style>
+        body {
+            font-family: 'Roboto', sans-serif;
+            background-color: #f4f4f4;
+        }
+
+        .hero-section {
+            background-image: url('../CV_BootStrap/img/Design%20sem%20nome.png');
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+            color: white;
+            height: 45vh;
+            margin: 0;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .hero-content {
+            background-color: rgba(0, 0, 0, 0.6);
+            padding: 30px;
+            border-radius: 8px;
+            max-width: 600px;
+        }
+
+        .hero-section h1,
+        .hero-section p {
+            text-align: left;
+        }
+
+        .black-section {
+            background-color: #1c1c1c;
+            color: #f1f1f1;
+            margin: 0;
+            padding: 40px;
+            border-radius: 8px;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
+        }
+
+        .section-heading {
+            border-bottom: 2px solid #f1f1f1;
+            padding-bottom: 10px;
+            margin-bottom: 30px;
+        }
+
+        .experience-item {
+            border-bottom: 1px solid #ccc;
+            padding-bottom: 20px;
+            margin-bottom: 20px;
+        }
+    </style>
+</head>
+
+<body>
     <header>
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../CV_BootStrap/img/simbolo_degradê.png" alt="Bootstrap" width="40" height="34">
-                  </a>
-              <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav">
-                  <a class="nav-link active" aria-current="page" href="#">Home</a>
-                  <a class="nav-link" href="../CV_BootStrap/html/portfolio.html">Portfólio</a>
-                  <a class="nav-link" href="../CV_BootStrap/html/contato.html">Contato</a>
+                    <img src="../CV_BootStrap/img/perfil%20preto.png" alt="Logo" width="40" height="34">
+                </a>
+                <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+                    <div class="navbar-nav">
+                        <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        <a class="nav-link" href="../CV_BootStrap/html/portfolio.html">Portfólio</a>
+                        <a class="nav-link" href="../CV_BootStrap/html/contato.html">Contato</a>
+                    </div>
                 </div>
-              </div>
             </div>
-          </nav>
+        </nav>
     </header>
 
-    <div class="primeiroBloco">
-        <div class="foto">
-            <img src="../CV_BootStrap/img/1N4A8682 (2).jpg" class="img-fluid" alt="Minha foto">
-        </div>
-
-        <div class="textoDaPrimeiraSessao">
-            <div class="titulo">
-                <h1>Prazer, sou o João Pedro</h1>
-            </div>
-
-            <div class="textoDeSessao">
-                <p>Sou estudante de engenharia de computação no Cefet-MG, campus Timóteo, e trabalho como profissional liberal para empresas que buscam por aumentar seu faturamento mensal através tráfego pago para páginas de vendas. No momento, busco por oportunidades de estágio em desenvolvimento front-end.</p>
-            </div>
-        </div>
-    </div>
-
-    <div class="segundoBloco">
-        <div class="titulo">
-            <h1>Formação</h1>
-        </div>
-
-        <div class="textoDeSessao">
-            <p>Sou estudante de engenharia de computação do sexto período, no Centro Federal de Educação Tecnológica de Minas Gerais. Como formação complementar, tenho certificação no uso de tecnologias como HTML/CSS, JavaScript, C, Python, Java e no momento estou estudando Flutter. Fui monitor da disciplina de Fundamentos de Programação II e no momento estou engajado no desenvolvimento de um projeto de Iniciação Científica.</p>
-        </div>
-    </div>
-
-    <div class="terceiroBloco">
-        <div class="titulo">
-            <h1>Experiência</h1>
-        </div>
-
-        <div class="expBloco">
-            <div class="nomeExp">
-                <h2>
-                    Monitor de Fundamentos de Programação II
-                </h2>
-            </div>
-
-            <div class="descExp">
-                <p>
-                    Desenvolvimento de atividades de monitoria em assuntos como estruturas de controle de fluxo, uso de funções, tipos de atributos como vetores e matrizes e sua manipulação.
-                </p>
-            </div>
-        </div>
-
-        <div class="expBloco">
-            <div class="nomeExp">
-                <h2>
-                    Desenvolvedor Front-end (Grupo Símius)
-                </h2>
-            </div>
-
-            <div class="descExp">
-                <p>
-                    Trabalho voluntário como desenvolvedor front-end em projetos de site para ONG's em território nacional.
-                </p>
-            </div>
-        </div>
-
-        <div class="expBloco">
-            <div class="nomeExp">
-                <h2>
-                    Estágio Aperam South America
-                </h2>
-            </div>
-
-            <div class="descExp">
-                <p>
-                 Desenvolvimento de relatórios sobre análise de funcionamento de equipamentos da Ciaria da indústria com Power BI, orientado a métricas de desempenho e de negócio.
+    <!-- Primeira Sessão -->
+    <div class="hero-section d-flex align-items-center justify-content-start">
+        <div class="container">
+            <div class="hero-content">
+                <h1 class="display-4">Prazer, sou o João Pedro</h1>
+                <p class="lead">
+                    Sou estudante de engenharia de computação no Cefet-MG, campus Timóteo, e trabalho como profissional
+                    liberal para empresas que buscam por aumentar seu faturamento mensal através de tráfego pago para
+                    páginas de vendas. No momento, busco por oportunidades de estágio em desenvolvimento front-end.
                 </p>
             </div>
         </div>
     </div>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  </body>
+    <!-- Segundo Bloco: Formação -->
+    <div class="container-fluid p-4">
+        <div class="black-section mb-5">
+            <div class="col-12">
+                <h1 class="display-5 section-heading">Formação</h1>
+                <p>
+                    Sou estudante de engenharia de computação do sexto período, no Centro Federal de Educação
+                    Tecnológica de Minas Gerais. Como formação complementar, tenho certificação no uso de tecnologias
+                    como HTML/CSS, JavaScript, C, Python, Java e no momento estou estudando Flutter. Fui monitor da
+                    disciplina de Fundamentos de Programação II e no momento estou engajado no desenvolvimento de um
+                    projeto de Iniciação Científica.
+                </p>
+            </div>
+        </div>
+
+        <!-- Terceiro Bloco: Experiência -->
+        <div class="black-section">
+            <div class="row">
+                <div class="col-12">
+                    <h1 class="display-5 section-heading">Experiência</h1>
+                </div>
+
+                <!-- Experiência 1 -->
+                <div class="col-12 experience-item">
+                    <h2 class="h4">Monitor de Fundamentos de Programação II</h2>
+                    <p>
+                        Desenvolvimento de atividades de monitoria em assuntos como estruturas de controle de fluxo, uso
+                        de funções, tipos de atributos como vetores e matrizes e sua manipulação.
+                    </p>
+                </div>
+
+                <!-- Experiência 2 -->
+                <div class="col-12 experience-item">
+                    <h2 class="h4">Desenvolvedor Front-end (Grupo Símius)</h2>
+                    <p>
+                        Trabalho voluntário como desenvolvedor front-end em projetos de site para ONG's em território
+                        nacional.
+                    </p>
+                </div>
+
+                <!-- Experiência 3 -->
+                <div class="col-12">
+                    <h2 class="h4">Estágio Aperam South America</h2>
+                    <p>
+                        Desenvolvimento de relatórios sobre análise de funcionamento de equipamentos da Ciaria da
+                        indústria com Power BI, orientado a métricas de desempenho e de negócio.
+                    </p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
+</body>
+
 </html>
