--- a/html/portfolio.html
+++ b/html/portfolio.html
@@ -49,7 +49,7 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="../img/perfil preto.png" alt="Logo" width="40" height="34">
+          <img src="../img/perfil-preto.svg" alt="Logo" width="40" height="34">
         </a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
