--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         }
 
         .hero-section {
-            background-image: url('../CV_BootStrap/img/Design%20sem%20nome.png');
+            background-image: url('../CV_BootStrap/img/Design\ sem\ nome.png');
             background-size: cover;
             background-position: center;
             background-repeat: no-repeat;
@@ -67,7 +67,7 @@
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
                 <a class="navbar-brand" href="#">
-                    <img src="../CV_BootStrap/img/perfil%20preto.png" alt="Logo" width="40" height="34">
+                    <img src="../CV_BootStrap/img/perfil-preto.svg" alt="Logo" width="40" height="34">
                 </a>
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
