Outra tentativa para deploy

--- a/index.html
+++ b/index.html
@@ -72,8 +72,8 @@
                 <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                     <div class="navbar-nav">
                         <a class="nav-link active" aria-current="page" href="#">Home</a>
-                        <a class="nav-link" href="../CV_BootStrap/html/portfolio.html">Portfólio</a>
-                        <a class="nav-link" href="../CV_BootStrap/html/contato.html">Contato</a>
+                        <a class="nav-link" href="../CV_BootStrap/portfolio.html">Portfólio</a>
+                        <a class="nav-link" href="../CV_BootStrap/contato.html">Contato</a>
                     </div>
                 </div>
             </div>
