--- a/portfolio.html
+++ b/portfolio.html
@@ -49,13 +49,13 @@
     <nav class="navbar navbar-expand-lg bg-body-tertiary">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
-          <img src="../img/perfil-preto.svg" alt="Logo" width="40" height="34">
+          <img src="../CV_BootStrap/img/perfil-preto.svg" alt="Logo" width="40" height="34">
         </a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link" href="../index.html">Home</a>
-            <a class="nav-link active" href="#">Portfólio</a>
-            <a class="nav-link" href="../html/contato.html">Contato</a>
+            <a class="nav-link" href="../CV_BootStrap/index.html">Home</a>
+            <a class="nav-link active" href="portfolio.html">Portfólio</a>
+            <a class="nav-link" href="../CV_BootStrap/contato.html">Contato</a>
           </div>
         </div>
       </div>
